[metadata]
description-file = README.rst

[install]
compopts=""
# At absolutely your own peril you can specify options to cmake e.g. compile against a custom version of numpy etc.
# or enabling architecture dependent optimizations during compile time.
# TAKE NOTE::: disable before pusing a sdist and bdist_wheel to pypi - supposed to 
#be architecture independent!!!
#compopts=-DENABLE_NATIVE_TUNING=ON -DENABLE_FAST_MATH=ON -DCMAKE_BUILD_TYPE=Release

[build]
compopts=""
#See [install] comment
#compopts=-DENABLE_NATIVE_TUNING=ON -DENABLE_FAST_MATH=ON -DCMAKE_BUILD_TYPE=Release

[bdist_wheel]
universal=0
